cmake_minimum_required(VERSION 3.24)
project(lab12_13_poo_20MAI)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab12_13_poo_20MAI main.cpp Product.h Product.cpp Repository.h Repository.cpp FileRepository.h FileRepository.cpp BankNotesRepo.h BankNotesRepo.cpp Service.h Service.cpp Teste.h Teste.cpp UI.h UI.cpp ExceptieGenerala.h ExceptieGenerala.cpp ExceptieCustomNumber.h ExceptieCustomNumber.cpp ExceptieFile.h ExceptieFile.cpp Validator.h Validator.cpp)
